# platform.core.uifw.libttssmt

./: AUTHORS  CMakeLists.txt  NOTICE  libttssmt.manifest  project.config  ttssmt-info.xml
packaging/: libttssmt.spec
setting-app/: AUTHORS  CMakeLists.txt  NOTICE  org.tizen.ttssmt-setting.xml
setting-app/po/: CMakeLists.txt  ar.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_PH.po  es_ES.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  kn.po  ko_KR.po  lt.po  lv.po  mk.po  ml.po  nb.po  nl.po  pl.po  (+19 more)
setting-app/src/: ttssmt_setting_main.c  ttssmt_setting_main.h
src/: SMTApis.h  _SlpSmtApis.cpp  _SlpSmtApis.h  plugin_internal.cpp  plugin_internal.h  ttsp.c
vdata/: smt_de_DE_f00.am  smt_de_DE_f00.dt  smt_de_DE_f00.qs  smt_es_ES_f00.am  smt_es_ES_f00.cfg  smt_es_ES_f00.dt  smt_es_ES_f00.qs  smt_fr_FR_f00.am  smt_fr_FR_f00.cfg  smt_fr_FR_f00.dt  smt_fr_FR_f00.qs  smt_ko_KR.lng  smt_ko_KR_f02.cfg
