CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ttssmt) 

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "${PREFIX}")
SET(LIBRARY_NAME "smt")
SET(VERSION 0.0.1)

SET(SRCS
 	src/ttsp.c
	src/plugin_internal.cpp
	src/_SlpSmtApis.cpp
	)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${INCLUDEDIR})
INCLUDE_DIRECTORIES(${LIBDIR}/glib-2.0/include)
INCLUDE_DIRECTORIES(${INCLUDEDIR}/glib-2.0)

## Dependent packages ##
INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
		dlog
		glib-2.0
		tts
)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

###########################
# DEFINITION TTS FEATURES #
###########################
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -DSLP"                     )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -DCOMPILE_FEATURE_TTS_SLIM")
#SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -D__FIXED_C"               )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -DKOREAN"                  )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -DUSENGLISH"               )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -DCHINESE"                 )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -DDICTIONARY"              )
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fPIC"                     )

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0")
#SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_EXE_LINKER_FLAGS "-Wall,--as-needed")

###########################
# COMPILE AS RELEASE MODE #
###########################
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_RELEASE}")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")

#ADD_LIBRARY(${LIBRARY_NAME} STATIC ${LIB_SRCS})
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS}    )

#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
MESSAGE(STATUS "======================================")
IF("${ARCH}" MATCHES "^arm.*")
MESSAGE(STATUS "Arch	-	arm")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -Llib/arm -lsmt ${pkgs_LDFLAGS})
INSTALL(FILES lib/arm/libsmt.so DESTINATION ${LIBDIR})
ELSEIF("${ARCH}" MATCHES "^i586.*")
MESSAGE(STATUS "Arch	-	i586")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} -Llib/i386 -lsmt ${pkgs_LDFLAGS})
INSTALL(FILES lib/i386/libsmt.so DESTINATION ${LIBDIR})
ENDIF()

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIBDIR}/voice/tts/1.0/engine COMPONENT RuntimeLibraries)
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/vdata/ DESTINATION /usr/share/voice/tts/smt_vdata)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/ttssmt-info.xml DESTINATION ${LIBDIR}/voice/tts/1.0/engine-info/)
